--- a/views/members/login.html
+++ b/views/members/login.html
@@ -24,11 +24,16 @@
         <div class="card-body login-card-body">
             <form action="/session_login" method="post">
                 <div class="input-group mb-3">
-                    <input type="text" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" 
+                    <input type="text" id="uid" name="uid" class="form-control" placeholder="이메일" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,15}$" 
                     title="영숫자 조합으로&#13;6에서 15자리까지만 입력가능합니다." required oninvalid="this.setCustomValidity('아이디를 입력하세요.')" oninput="this.setCustomValidity('')">
                     <div class="input-group-append">
                     </div>
                 </div>
+                <!-- <div class="input-group mb-3">
+                    <input type="email" id="uid" name="uid" class="form-control" placeholder="이메일">
+                    <div class="input-group-append">
+                    </div>
+                </div> -->
                 <!-- <div class="input-group mb-3">
                     <input type="email" id="uid" name="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
                     <div class="input-group-append">
