--- a/views/admin.html
+++ b/views/admin.html
@@ -181,7 +181,7 @@
                                         <table class="table table-hover" id="gen_tables" style="white-space: nowrap; width: 100%; display: none;">
                                             <thead>
                                                 <tr>
-                                                    <th>아이디</th>
+                                                    <th>이메일</th>
                                                     <th>지역</th>
                                                     <th>직급</th>
                                                     <th>이름</th>
@@ -211,7 +211,7 @@
                                 <table class="table table-hover" id="ap_tables" style="white-space: nowrap; width: 100%;">
                                     <thead>
                                         <tr>
-                                            <th>아이디</th>
+                                            <th>이메일</th>
                                             <th>학교</th>
                                             <th>직급</th>
                                             <th>이름</th>
