--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -325,21 +325,21 @@
                 <div class="col-lg-6 col-md-4 col-sm-12 card-all">
                     <div class="card-container">
                         <div class="row" style="margin: calc(-1 * var(--bs-gutter-y)) 0 0 0;">
-                            <div class="col-lg-4 col-sm-6 enver-card" onclick="this.classList.toggle('flipped')" id="ex_temp">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 enver-card" onclick="this.classList.toggle('flipped')" id="ex_temp">
                             </div>
-                            <div class="col-lg-4 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="water_temp">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="water_temp">
                             </div>
-                            <div class="col-lg-4 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="hum">
-                            </div>
-
-                            <div class="col-lg-6 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="illum">
-                            </div>
-                            <div class="col-lg-6 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="ec">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="hum">
                             </div>
 
-                            <div class="col-lg-6 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="ph">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 enver-card " onclick="this.classList.toggle('flipped')" id="illum">
                             </div>
-                            <div class="col-lg-6 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="do">
+                            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="ec">
+                            </div>
+
+                            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="ph">
+                            </div>
+                            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 enver-card " onclick="this.classList.toggle('flipped')" id="do">
                             </div>
 
                             <div class="col-12 enver-card" onclick="this.classList.toggle('flipped')" style="width: 100%;" id="motor">
@@ -434,7 +434,7 @@
                 html = `<div class="card card-inner">
                             <div class="card-face card-front">
                                 <div class="row col" style="align-items: center; font-size: 35px; color: #25252599;">
-                                    <i class="${icons[i]}"></i>
+                                    <i class="${icons[i]}" style="padding-bottom: 0.7rem;"></i>
                                     <h2 class="h6" style="margin: 0; padding: 0;">${v[0]}</h2>
                                 </div>
                                 <div class="col">
