--- a/views/members/register.html
+++ b/views/members/register.html
@@ -119,10 +119,10 @@
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="text" name="id" id="uid" class="form-control" placeholder="아이디" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
+                        <input type="text" name="id" id="uid" class="form-control" placeholder="이메일" pattern="[a-zA-Z0-9]+[@][a-zA-Z0-9]+[.]+[a-zA-Z]+[.]*[a-zA-Z]*">
                         <button type="button" class="btn btn-success" onclick="sendmail()">인증</button>
                     </div>
-                    <label id="lUid" style="color: red;" hidden>사용할 수 없는 아이디입니다.</label>
+                    <label id="lUid" style="color: red;" hidden>사용할 수 없는 이메일입니다.</label>
                 </div>
                 <div class="mb-3" id="valid_div" hidden>
                     <div class="input-group">
