--- a/views/student_manage.html
+++ b/views/student_manage.html
@@ -129,7 +129,7 @@
                                 <table class="table table-hover" id="tables" style="white-space: nowrap; width: 100%;">
                                     <thead>
                                         <tr>
-                                            <th>아이디</th>
+                                            <th>이메일</th>
                                             <th>학교</th>
                                             <th>직급</th>
                                             <th>이름</th>
