--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -288,7 +288,7 @@
                             </div>
                             <div class="card-face card-back">
                                 <div class="row col" style="align-items: center; font-size: 35px; color: #25252599;">
-                                    <i class="${icons[i]}"></i>
+                                    <i class="${icons[i]}" style="padding-bottom: 0.7rem;"></i>
                                     <h2 class="h6" style="margin: 0; padding: 0;">${v[0]}</h2>
                                 </div>
                                 <div class="row col" style="align-items: center; font-weight: bold;">
